--- a/index.html
+++ b/index.html
@@ -88,5 +88,14 @@
       instansi atau lembaga pendidikan, diberikan jadwal hari Selasa sampai Jumat. Sementara itu,
       kunjungan individu dibuka setiap hari Sabtu.
     </p>
+
+    <h2>Kota Bandung</h2>
+    <p>Kota Kembang Paris van Java</p>
+    <figure>
+      <img src="assets/image/bandung-badge.png" alt="Lencana Bandung">
+      <figcaption>Lambang</figcaption>
+    </figure>
+
+    <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy.</p>
   </body>
 </html>
