--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </article>
     
       <aside>
-        <article class="card" class="profile">
+        <article class="profile card">
           <header>
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
